<resources>
    <string name="app_name">iLearn</string>
    <string name="select">Select</string>
    <string name="presents">PRESENTS</string>
    <string name="ad_id">ca-app-pub-7303190061353762~6990578242</string>
    <string name="kids_learning">iLearn</string>
    <string name="from">for</string>
    <string name="share">Feedback</string>
    <string name="rate">Profile</string>
    <string name="let_us_learn">Let Us Learn!</string>
    <string name="hey_we_are_so_glad_you_are_loving_our_app_we_would_love_your_rating_so_it_can_help_others_make_a_great_choice">Hey! We are so glad you are loving our app. We would love your feedback so it can help us make a great choice.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="sure">Sure</string>
    <string name="mad">PRE</string>
    <string name="house">SCHOOLER</string>
    <string name="find_object">TRY FINDING OBJECT</string>
    <string name="feedback">Your feedback</string>
    <string name="child_s_name">Child\'s name</string>
    <string name="let_s_set_up_your_child_s_profile">Let\'s set up your child\'s profile.</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="set_success">Your child\'s name has been set.</string>
    <array name="colors">
        <item>@color/red</item>
        <item>@color/pink</item>
        <item>@color/purple</item>
        <item>@color/indigo</item>
        <item>@color/blue</item>
        <item>@color/lightblue</item>
        <item>@color/cyan</item>
        <item>@color/teal</item>
        <item>@color/green</item>
        <item>@color/lime</item>
        <item>@color/yellow</item>
        <item>@color/amber</item>
        <item>@color/orange</item>
        <item>@color/brown</item>
        <item>@color/grey</item>
        <item>@color/black</item>
        <item>@color/white</item>
    </array>
    <array name="colorNames">
        <item>RED</item>
        <item>PINK</item>
        <item>PURPLE</item>
        <item>INDIGO</item>
        <item>BLUE</item>
        <item>SKY BLUE</item>
        <item>CYAN</item>
        <item>TEAL</item>
        <item>GREEN</item>
        <item>LIME</item>
        <item>YELLOW</item>
        <item>AMBER</item>
        <item>ORANGE</item>
        <item>BROWN</item>
        <item>GREY</item>
        <item>BLACK</item>
        <item>WHITE</item>
    </array>

    <string name="disclaimer">Personal information is any information that identifies a user as an individual\n\nWe do not collect any personal information from children in our mobile apps or on our website.\n\nWe may collect personal from parents and teachers when they voluntarily provide it. This may include collecting email addresses when parents and teachers sign up.\n\nIf you submit a feedback, we may need your email address and other information you provide related to your support request. We use this information to provide only support to you. We don\'t share your email address unless we have your express consent.\n\nThis app don\'t use or collect a user\'s precise geographic location.\nThis app don\'t contain any advertising banners.\nThis app may contain external links to our page on the Play Store or to our Facebook page but it is all kept in the parent section where young kids can\'t access.\n\nIf you have any questions regarding to this Disclaimer, please send us an email to: arabelle.mon@lorma.edu</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string-array name="objects">
        <item>mouse</item>
        <item>electric fan</item>
        <item>computer keyboard</item>
        <item>digital watch</item>
        <item>pizza</item>
        <item>banana</item>
        <item>wall clock</item>
        <item>orange</item>
        <item>water bottle</item>
        <item>coffee mug</item>
        <item>envelope</item>
        <item>running shoe</item>
        <item>sweatshirt</item>
        <item>hotdog</item>
        <item>carbonara</item>
    </string-array>

    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="_0">0%</string>

    <string name="action_settings">Settings</string>
    <string name="easy_level">EASY</string>
    <string name="medium_level">MEDIUM</string>
    <string name="hard_level">HARD</string>
    <string name="action_save_bitmap">Save</string>
    <string name="text_your_score">Your Score</string>
    <string name="text_best_score">Best Score</string>
    <string name="setting_clear_data">Clear Data</string>
    <string name="setting_vibrate">Vibrate for wrong touches?</string>
    <string name="title_licenses">Open Source Licenses</string>
    <string name="title_uil_license">Universal Image Loader</string>
    <string name="license_uil">Copyright 2011-2015 Sergey Tarasevich

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="title_sugar_orm_license">Sugar ORM</string>
    <string name="license_sugar_orm">Copyright 2012 by Satya Narayan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
    <string name="title_fancy_buttons_license">Fancy Buttons</string>
    <string name="license_fancy_buttons">Permission is hereby granted, free of charge, to any person
obtaining a copy of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights to use, copy, modify,
merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

</resources>
