<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/hey_we_are_so_glad_you_are_loving_our_app_we_would_love_your_rating_so_it_can_help_others_make_a_great_choice"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedback_text_input"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:hint="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_edit_text"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/application_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrb_progressTint="@color/colorPrimaryDark"
            app:mrb_secondaryProgressTint="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:focusable="false"
            style="@style/Widget.MaterialRatingBar.RatingBar.Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B71C1C"
            android:text="@string/no_thanks"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:text="@string/sure"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>